feat: add score api
